[package]
name = "dasp-resample-playground"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp_frame = { path = "../dasp/dasp_frame" }
dasp_interpolate = { path = "../dasp/dasp_interpolate", features = ["sinc"] }
dasp_ring_buffer = { path = "../dasp/dasp_ring_buffer" }
dasp_sample = { path = "../dasp/dasp_sample" }
dasp_signal = { path = "../dasp/dasp_signal" }
byteorder = "1.4"
