[package]
name = "dasp-resample-playground"
version = "0.1.0"
authors = ["Mark LeMoine <linclelinkpart5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dasp_frame = { path = "../dasp/dasp_frame" }
dasp_interpolate = { path = "../dasp/dasp_interpolate", features = ["floor", "linear", "sinc"] }
dasp_ring_buffer = { path = "../dasp/dasp_ring_buffer" }
dasp_sample = { path = "../dasp/dasp_sample" }
dasp_signal = { path = "../dasp/dasp_signal" }
sampara = { path = "../sampara" }
byteorder = "1.4"
